--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ footer a {
   padding: 15px;
   background-color: #b38d8b;
   border-radius: 59px;
+  display: block;
+  margin: 4px;
+  max-width: fit-content;
 }
 footer a:hover{
   box-shadow: 0px 0px 13px;
